arete-macros/tests/ui/validation_errors/struct_mode_args_not_supported.stderr
error: #[arete(...)] arguments are only supported on modules
 --> tests/ui/validation_errors/struct_mode_args_not_supported.rs:4:8
  |
4 | struct Broken {
  |        ^^^^^^
