arete-macros/tests/ui/validation_errors/struct_mode_args_not_supported.rs
use arete_macros::arete;

#[arete(idl = "tests/ui/fixtures/unused.json")]
struct Broken {
    value: u64,
}

fn main() {}
